--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ authors = ["Beat Liechti <beat@softbase.tech>"]
 edition = "2021"
 
 [dependencies]
+chrono = "0.4"
+clap = { version = "4.5", features = ["derive"] }
+ctrlc = "3.4"
+dotenv = "0.15"
 env_logger = "0.11"
 i2c-linux = "0.1"
 log = "0.4"
